fix: teaser spacing on browse all page exlm-1114

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1084,6 +1084,7 @@ body[class^='browse-'] main {
 
     & .section.curated-cards-container,
     & .section.events-cards-container,
+    & .section.teaser-container,
     & .section.adls-cards-container {
       padding-top: 40px;
       padding-bottom: 40px;
